2020-04-10  Akira Kakuto  <kakuto@w32tex.org>

	* dospecial.c: Support \special{psfile=non-ascii-name}.

2020-03-27  Karl Berry  <karl@tug.org>

	* TeX Live 2020.

2020-02-29  Tomas Rokicki  <rokicki@gmail.com>

	* loadfont.c (bitmapfontseen): define new global.
	(loadfont): set it, if a bitmap font is seen.
	* protos.h (bitmapfontseen): declare it.
	* output.c (initprinter): If bitmapfontseen, emit
	%%ViewingOrientation comment to try to cope with Distiller's
        auto-orientation (page rotation).

2020-01-30  Karl Berry  <karl@freefriends.org>

	* Makefile.am (enc_DATA): new variable, for new file dvips-all.enc.
	* configure.ac (encdir): define it.

2020-01-30  Akira Kakuto  <kakuto@w32tex.org>

	* bitmapenc.c: use strchr() instead of index(), because index()
	is not supported in Visual Studio 2010.

2020-01-29  Tomas Rokicki  <rokicki@gmail.com>
	
	* bitmapenc.c (struct bmenc): new member existsbm.
	(parseencodingfile): rename from parseencoding; change calls.
	(trytoparseenc),
	(parseenc): new fns.
	(addbmenc): call parseenc.
	(getencoding_seq): change type to struct bmenc.
	(downloadbmencoding): check that every defined character has a name.
	(doubleout): take double instead of float.
	* dvips-all.enc: more fonts.
	* dvips.c (-bitmapfontenc): rename option from -J.
	* dvips.texi: adjust documentation.
	* resident.c (get_defaults): new case b for bitmapfontenc,
	renamed from J.

2020-01-16  Karl Berry  <karl@freefriends.org>

	* afm2tfm.c,
	* dvips.c,
	* configure.ac: version 2020.1 and copyright 2020.

2020-01-12  Akira Kakuto  <kakuto@w32tex.org>

	* bitmapenc.c, download.c: Support old compilers, by declaring
	variables early in a block.

2020-01-11  Tomas Rokicki  <rokicki@gmail.com>

	Support encodings for bitmapped fonts, e.g., when cmr10
	is used as a bitmap. TUGboat article:
	https://tug.org/TUGboat/tb40-2/tb125rokicki-type3search.pdf
	
	* dvips-all.enc,
	* bitmapenc.c: new files.
	* Makefile.am (dvips_SOURCES): add it.